@@ -14,7 +14,7 @@ issue 22:
     strategy: debug where block updates are called & why the block is not updated correct
 
 issue 23:
-    bug: when sand is falling, it falls more than 1 block at a time, see issue 22 for reproducing
+    bug: when sand is falling, it can fall more than 1 block at a time, see issue 22 for reproducing
     possible reason: fall is active two times in TickHandler
 
 issue 24:
@@ -42,17 +42,10 @@ issue 55:
     since: alpha rendering was implemented
     possible fix: disable depth test & order faces by ourselves OR change rendering mode
 
-issue 75:
-    bug: ender chest & christmas chest texture is wrong on top
-    since: texture update to 1.15.2
-    possible fix: update texture coord system
-    better fix: update models to use correct UV's
-    even better fix: implement CustomBlockRenderer for rendering it
-
 issue 80:
     bug: in some cases, mouse button up is still not handled
 
-issue 95:
+issue 95: [may be fixed on 20.02.2020 during registry change; Please test and mark as fixed]
     bug: in some cases, blocks are added double in debug world
     found: during testing mod block system loading, maybe when new during not pre-build phase
     possible fix: make sure that every block is added ones into debug world list
@@ -65,10 +58,6 @@ issue 96:
     bug: SlotCopy does not always work correctly
     possible fix: rewrite SlotCopy
 
-issue 97:
-    bug: slots in hotbar can be highlighted
-    possible fix: add new attribute to Slot which disables the hovering rendering
-
 issue 98:
     bug: when moving & reinserting an item in hotbar from player inventory main the item in the hotbar is not rendered
     possible fix: see issue 96
@@ -79,3 +68,6 @@ issue 100:
 
 [101]
 
+issue 102:
+    bug: when re-building, carved pumpkin can't be build correct due to same image as pumpkin
+    fix: add rotated image
